# sgxwallet

./: .codacy.yml  .gitignore  .gitmodules  .travis.yml  BLSCrypto.cpp  BLSCrypto.h  BLSCrypto.hpp  BLSPrivateKeyShareSGX.cpp  BLSPrivateKeyShareSGX.h  BLSSignReqMessage.cpp  BLSSignReqMessage.h  BLSSignRspMessage.cpp  BLSSignRspMessage.h  CMakeLists.txt  CSRManagerServer.cpp  CSRManagerServer.h  CryptoTools.cpp  CryptoTools.h  DKGCrypto.cpp  DKGCrypto.h  Dockerfile  DockerfileBase  DockerfileBaseNew  DockerfileIntelSubmission  DockerfileRelease  DockerfileSimulation  ECDSACrypto.cpp  ECDSACrypto.h  ECDSAImpl.c  ECDSASignReqMessage.cpp  ECDSASignReqMessage.h  ECDSASignRspMessage.cpp  ECDSASignRspMessage.h  Exception.cpp  Exception.h  ExitHandler.cpp  ExitHandler.h  ExitRequestedException.cpp  ExitRequestedException.h  INTEL_SGX_LICENSE  (+102 more)
.github/: CODEOWNERS  CONTRIBUTING.md
.github/workflows/: ccpp.yml  clang-format-check.yml  codeql-analysis.yml  dockerimage.yml  dockerimagebase.yml  dockerimageintelsubmission.yml  dockerimageintelsubmssion.yml  dockerimagerelease.yml  dockerimagesim.yml  nightlytests.yml
EnclaveGmpTest/: BLSUtils.cpp  BLSUtils.h  EnclaveGmpTest.c  EnclaveGmpTest.edl  Makefile  Makefile.am  Makefile.in
EnclaveGmpTest/.deps/: EnclaveGmpTest.Po  EnclaveGmpTest_t.Po
build-aux/: sgx_app.am  sgx_enclave.am  sgx_tlib.am
cert/: .rnd  ca.config  create_CA  create_client_cert  create_server_cert  verify_client_cert
docker/: Dockerfile  build.sh  check_firewall.py  install-psw-dcap-source.patch  install-psw-linux-sgx.patch  install-psw.patch  start.sh
docs/: README.md  admin-guide.md  admin_guide.md  antora.yml  backup-procedure.md  building.md  configuring.md  developer-guide.md  developer_guide.md  enabling-sgx.md  examples.md  grep-certificates.md  healthchecks.md  healthckes.md  index.md  performance.md  prerequisites.md  run-in-hardware-mode.md  run_in_hardware_mode.md
docs/modules/ROOT/pages/: 01_introduction_and_goals.adoc  02_architecture_constraints.adoc  03_system_scope_and_context.adoc  04_solution_strategy.adoc  05_building_block_view.adoc  06_runtime_view.adoc  07_deployment_view.adoc  09_design_decisions.adoc  10_quality_scenarios.adoc  11_technical_risks.adoc  12_glossary.adoc  about-sgxwallet.adoc  index.adoc
insecure-samples/: yourdomain.csr  yourdomain.key
jsonrpc/: build.sh
m4/: sgx_init.m4
run_sgx/: docker-compose.yml
run_sgx_sim/: docker-compose.yml
samples/: yourdomain.csr
scripts/: automake_1.15.1-3ubuntu2_all.deb  build.py  build_and_publish.sh  build_deps.py  build_image.sh  build_sgx.sh  calculate_version.sh  common-psw.patch  docker_build.py  docker_build_push.py  docker_push.py  docker_test.py  format.py  generate_signing_key.bash  grep_certificates.py  install_driver.sh  install_packages.sh  libsgx-enclave-common_2.13.100.4-bionic1_amd64.deb  libsgx-enclave-common_2.5.101.50123-bionic1_amd64.deb  merge_db.py  publish_image.sh  sign_enclave.bash
secure_enclave/: AESUtils.c  AESUtils.cpp  AESUtils.h  BLSEnclave.cpp  BLSEnclave.h  BLSUtils.cpp  BLSUtils.h  Curves.c  Curves.h  DHDkg.c  DHDkg.h  DH_dkg.c  DH_dkg.h  DKGUtils.cpp  DKGUtils.h  DomainParameters.c  DomainParameters.cpp  DomainParameters.h  EnclaveCommon.cpp  EnclaveCommon.h  EnclaveConstants.h  HKDF.c  HKDF.h  Makefile  Makefile.am  Makefile.am.orig  Makefile.in  NumberTheory.c  NumberTheory.cpp  NumberTheory.h  Point.c  Point.h  SIGNED_ENCLAVE_VERSION  Signature.c  Signature.h  TEUtils.cpp  TEUtils.h  Verify.h  curves.c  curves.h  (+21 more)
secure_enclave/.deps/: BLSEnclave.Po  BLSUtils.Po  DKGUtils.Po  ECDSAUtils.Po  alt_bn128_g1.Po  alt_bn128_g2.Po  alt_bn128_init.Po  alt_bn128_pp.Tpo  curves.Po  domain_parameters.Po  numbertheory.Po  point.Po  secure_enclave.Po  secure_enclave_t.Po  sha1.Po  signature.Po
sgx_data/CSR_DB/: LOG  LOG.old
sgx_data/CSR_STATUS_DB/: 000009.ldb  LOG  LOG.old  MANIFEST-000008
sgx_data/cert/: SGXServerCert.crt  SGXServerCert.csr  SGXServerCert.key  create_client_cert  create_server_cert  index.txt  index.txt.old  rootCA.key  rootCA.pem
sgx_data/cert/new_certs/: 02.pem
sgx_data/sgxwallet.db/: 000009.ldb  LOG  LOG.old  MANIFEST-000008
trusted_libff/libff/algebra/curves/: curve_utils.hpp
trusted_libff/libff/algebra/curves/alt_bn128/: alt_bn128_g1.cpp  alt_bn128_g1.hpp  alt_bn128_g2.cpp  alt_bn128_g2.hpp  alt_bn128_init.cpp  alt_bn128_init.hpp  alt_bn128_pp.cpp  alt_bn128_pp.hpp
trusted_libff/libff/algebra/curves/bn128/: bn128_g2.cpp  bn128_gt.hpp
trusted_libff/libff/algebra/curves/edwards/: edwards_g1.cpp  edwards_g2.hpp  edwards_pairing.cpp  edwards_pairing.hpp
trusted_libff/libff/algebra/exponentiation/: exponentiation.hpp  exponentiation.tcc
trusted_libff/libff/algebra/fields/: bigint.tcc  field_utils.hpp  field_utils.tcc  fp.hpp  fp.tcc  fp2.hpp  fp2.tcc
trusted_libff/libff/algebra/scalar_multiplication/: multiexp.tcc  multiexp_profile.cpp
trusted_libff/libff/common/: double.cpp  double.hpp  profiling.cpp  rng.hpp  rng.tcc  utils.cpp
trusted_libff/libff/libff/algebra/curves/alt_bn128/: alt_bn128_g1.cpp  alt_bn128_g1.hpp  alt_bn128_pp.hpp
trusted_libff/libff/libff/algebra/curves/bn128/: bn128_g1.hpp  bn128_g2.hpp  bn128_gt.cpp  bn128_pairing.cpp
trusted_libff/libff/libff/algebra/curves/mnt/mnt4/: mnt4_g1.cpp  mnt4_pairing.cpp
trusted_libff/libff/libff/algebra/curves/mnt/mnt6/: mnt6_g2.hpp
trusted_libff/libff/libff/algebra/fields/: bigint.tcc  fp.tcc
zmq_src/: Agent.cpp  Agent.h  BLSSignReqMessage.cpp  BLSSignReqMessage.h  BLSSignRspMessage.cpp  BLSSignRspMessage.h  ECDSASignReqMessage.cpp  ECDSASignReqMessage.h  ECDSASignRspMessage.cpp  ECDSASignRspMessage.h  ReqMessage.cpp  ReqMessage.h  RspMessage.cpp  RspMessage.h  ServerWorker.cpp  ServerWorker.h  WorkerThreadPool.cpp  WorkerThreadPool.h  ZMQClient.cpp  ZMQClient.h  ZMQMessage.cpp  ZMQMessage.h  ZMQServer.cpp  ZMQServer.h
